--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <link rel="icon" href="%PUBLIC_URL%/stack-192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <link
+      rel="apple-touch-icon"
+      href="%PUBLIC_URL%/stack-apple-touch-icon.png"
+      sizes="192x192" />
     <meta
       name="description"
       content="Web site created using create-react-app" />
