working system + dark theme

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/stack-apple-touch-icon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/stack-apple-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#fff" />
     <meta name="mobile-web-app-capable" content="yes" />
